[metadata]
name = bibmerge
version = 0.1.0
description = Merge and deduplicate BibTeX databases
long_description = file: README.md
long_description_content_type = text/markdown
keywords =
    tex
    latex
    bibtex
    deduplicate
maintainer = Christian Burkert
maintainer_email = foss@cburkert.de
url = https://github.com/cburkert/bibmerge
license = MIT
license_file = LICENSE
classifiers =
    Topic :: Software Development :: Version Control :: Git
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
install_requires =
    bibtexparser==1.4.0

[options.packages.find]
where = .

[options.entry_points]
console_scripts =
    bibmerge = bibmerge.main:main
